--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -2,9 +2,5 @@
 html,
 body {
   height: 100%;
-  background-color: #fff5f5;
-}
-
-body {
-  background-color: red;
+  background-color: #f0f0f0a4;
 }
